# az_cost_analysis

./: README.md  pyproject.toml
.github/agents/: az_cost_analysis_expert.md
.github/skills/: azure-cost-analyzer.md
src/azure_cost_analyzer/: __init__.py  auth.py  cli.py  cost_query.py  data_processing.py  pdf_export.py  report.py  subscriptions.py
src/azure_cost_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: report.html.j2
tests/: conftest.py  test_cost_query.py  test_data_processing.py
